# Cargo.toml
# Copyright 2016 Alexander Altman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "konane"
version = "0.1.0"
authors = ["Alexander Ronald Altman <alexanderaltman@me.com>"]
description = "A library and executable for the ancient Polynesian game kōnane"
repository = "https://github.com/pthariensflame/konane"
readme = "README.md"
license = "Apache-2.0"
keywords = ["game"]
build = "build.rs"

[build-dependencies]
rusty-cheddar = {version = "~0.3.3", optional = true}

[dependencies]
libc = {version = "~0.2.14", optional = true}
image = "~0.10.1"
gfx_core = "~0.4.0"
gfx_device_gl = "~0.11.0"
error-chain = "~0.2.2"
piston_window = "~0.50.0"
piston2d-sprite = "~0.27.0"
piston2d-drag_controller = "~0.14.0"
clap = "~2.9.3"
rand = "~0.3.14"
uuid = {version = "~0.2.3", features = ["use_std"]}

[lib]
name = "konane"
path = "src/lib.rs"

[[bin]]
name = "konane"
path = "src/main.rs"
doc = false

[features]
c-api = ["rusty-cheddar", "libc"]
default = []
